--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sidoc/php-tool-library",
+    "name": "sidoc/php-test",
     "description": "PHP自定义代码工具库",
     "license": "MIT",
     "authors": [
