--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "topthink/think-captcha": ">=1.0",
         "qcloud/cos-sdk-v5": "2.5.1",
         "qiniu/php-sdk": "7.4.2",
+        "gregwar/captcha": "1.*",
         "tencentcloud/tencentcloud-sdk-php": "3.0.594"
     },
     "autoload": {
